# fastactor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  llms.txt  mise.toml  pyproject.toml  pyrightconfig.json
.claude/: CLAUDE.md
.github/workflows/: test.yml
src/fastactor/: __init__.py  settings.py  telemetry.py  utils.py
src/fastactor/otp/: README.md  __init__.py  _exceptions.py  _messages.py  agent.py  dynamic_supervisor.py  gen_event.py  gen_server.py  gen_stage.py  gen_state_machine.py  process.py  registry.py  runtime.py  supervisor.py  task.py
src/tests/: README.md  conftest.py  support.py  test_dynamic_supervisor.py  test_gen_server.py  test_links_and_monitors.py  test_process.py  test_registry.py  test_runtime_entrypoints.py  test_supervisor_lifecycle.py  test_supervisor_strategies.py  test_telemetry.py
src/tests/e2e/: support.py  test_adaptive_pool.py  test_chaos_monkey.py  test_compute_state_split.py  test_consensus_voting.py  test_hierarchical_planning.py  test_multi_agent_system.py  test_racing_speculators.py
src/tests/otel/: test_no_telemetry.py  test_telemetry.py
src/tests/otp/: SPEC.md  helpers.py  support.py  test_agent.py  test_dynamic_supervisor.py  test_events.py  test_gen_event.py  test_gen_server.py  test_gen_stage.py  test_gen_state_machine.py  test_mailbox.py  test_message_metadata.py  test_messages_wire.py  test_process.py  test_process_timers.py  test_registry.py  test_runtime_supervisor.py  test_supervisor.py  test_sys.py  test_task.py
src/tests/tutorial/: README.md  test_00_why_actors.py  (+11 more)
writing/: why_actors.md
