[project]
name = "fastactor"
version = "0.1.0"
description = "FastActor is a fast and easy-to-use actor framework for Python."
authors = [{ name = "Cyrus Nouroozi", email = "cyrus@zenbase.ai" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "anyio>=4.13.0",
    "pyee>=13.0.1",
    "pydantic-settings>=2.14.0",
    "sorcery>=0.2.2",
    "svix-ksuid>=0.7.0",
    "beartype>=0.22.9",
]
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "ipdb>=0.13.13",
    "pytest>=9.0.3",
    "trio>=0.33.0",
    "pydantic>=2.13.3",
    "ty>=0.0.32",
    "ruff>=0.15.11",
    "opentelemetry-sdk>=1.27",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastactor"]
